# TUP-Vision-2023-Based

./: .gitignore  README.md  WatchDog.sh
rmoss_master/rmoss_daheng_driver/: CMakeLists.txt
rmoss_master/rmoss_daheng_driver/config/daheng_config/: KE0200110074.txt
rmoss_master/rmoss_daheng_driver/include/: CMakeCache.txt  cmake_install.cmake  test  test.cpp
rmoss_master/rmoss_daheng_driver/include/rmoss_daheng_driver/: daheng_cam.hpp
rmoss_master/rmoss_daheng_driver/launch/: daheng_cam.launch.py
rmoss_master/rmoss_daheng_driver/src/: daheng_cam_node.cpp
rmoss_master/rmoss_daheng_driver/src/cam_driver/: daheng_cam.cpp
rmoss_master/rmoss_ign/rmoss_ign_base/: CMakeLists.txt  README.md  package.xml
rmoss_master/rmoss_ign/rmoss_ign_base/include/rmoss_ign_base/: chassis_controller.hpp  gimbal_controller.hpp  hardware_interface.hpp  ign_light_bar_cmd.hpp  ign_shoot_actuator.hpp  rmua19_robot_base_node.hpp  shooter_controller.hpp
rmoss_master/rmoss_ign/rmoss_ign_base/scripts/: test_chassis_cmd.py  test_shoot_cmd.py
rmoss_master/rmoss_ign/rmoss_ign_base/src/: chassis_controller.cpp  pid.cpp  shooter_controller.cpp
rmoss_master/rmoss_ign/rmoss_ign_base/src/ign_module/: ign_gimbal_imu.cpp  ign_light_bar_cmd.cpp  ign_odometry.cpp
rmoss_master/rmoss_ign/rmoss_ign_bridge/: package.xml
rmoss_master/rmoss_ign/rmoss_ign_bridge/include/rmoss_ign_bridge/: pose_bridge_node.hpp
rmoss_master/rmoss_ign/rmoss_ign_bridge/src/: pose_bridge_main.cpp  pose_bridge_node.cpp
rmoss_master/rmoss_ign/rmoss_ign_plugins/: package.xml
rmoss_master/rmoss_ign/rmoss_ign_plugins/env-hooks/: ignition.dsv.in
rmoss_master/rmoss_ign/rmoss_ign_plugins/plugins/mecanum_drive2/: MecanumDrive2.hh
rmoss_master/rmoss_ign/rmoss_ign_plugins/test/scripts/: shoot_pub.sh
rmoss_master/rmoss_ign_resources/: package.xml  update_model.sh
rmoss_master/rmoss_ign_resources/env-hooks/: ignition.dsv.in
rmoss_master/rmoss_ign_resources/resource/models/rm21_armor_module/: model.config  rm21_armor_module.def.xmacro
rmoss_master/rmoss_ign_resources/resource/models/rm21_light_indicator_module/: model.config  model.sdf  model.sdf.xmacro  rm21_light_indicator_module.def.xmacro
src/camera_driver/: CMakeLists.txt  README.md  package.xml
src/camera_driver/config/: camera.yaml  daheng_cam_param.ini  mvs_cam_param.config
src/camera_driver/dependencies/hik_sdk/MVS/: ReleaseNote_CH.txt  (+1 more)
src/camera_driver/dependencies/mvs_sdk/: camera.h
src/camera_driver/include/camera_driver/: camera_driver.hpp  camera_driver_node.hpp
src/camera_driver/include/daheng_driver/: daheng_cam_node.hpp  daheng_camera.hpp
src/camera_driver/include/hik_driver/: hik_cam_node.hpp  hik_camera.hpp
src/camera_driver/include/mvs_driver/: mvs_cam_node.hpp  mvs_camera.hpp
src/camera_driver/include/usb_driver/: usb_cam.hpp  usb_cam_node.hpp
src/camera_driver/launch/: daheng_cam_node.launch.py  hik_cam_node.launch.py  usb_cam_node.launch.py
src/camera_driver/recorder/: README.md
src/camera_driver/src/camera_driver/: camera_driver.cpp  camera_driver_node.cpp
src/camera_driver/src/daheng_driver/: daheng_cam_node.cpp  daheng_cam_node_main.cpp  daheng_camera.cpp
src/camera_driver/src/hik_driver/: hik_cam_node.cpp  hik_cam_node_main.cpp  hik_camera.cpp
src/camera_driver/src/mvs_driver/: mvs_cam_node.cpp  mvs_cam_node_main.cpp  mvs_camera.cpp
src/camera_driver/src/usb_driver/: usb_cam.cpp  usb_cam_node.cpp  usb_cam_node_main.cpp
src/global_user/: CMakeLists.txt  README.md  package.xml
src/global_user/config/: autoaim.yaml  buff.yaml  camera.yaml  camera_ros.yaml  filter_param.yaml
src/global_user/include/: coordsolver.hpp
src/global_user/include/global_user/: global_user.hpp
src/global_user/launch/: autoaim_bringup.laumch.py  autoaim_bringup.launch.py  autoaim_processor_dbg.launch.py  buff_bringup.launch.py  buff_bringup_dbg.launch.py  vision.py  vision_bringup.launch.py
src/global_user/src/: coordsolver.cpp  global_user.cpp
src/rmoss_master/rmoss_daheng_driver/: README.md  package.xml
src/rmoss_master/rmoss_daheng_driver/config/: cam_param.yaml
src/rmoss_master/rmoss_daheng_driver/include/: CMakeLists.txt  Makefile
src/rmoss_master/rmoss_daheng_driver/src/: daheng_cam_node_main.cpp
src/rmoss_master/rmoss_ign/rmoss_ign_bridge/: CMakeLists.txt  README.md
src/rmoss_master/rmoss_ign/rmoss_ign_cam/: CMakeLists.txt
src/rmoss_master/rmoss_ign/rmoss_ign_plugins/: CMakeLists.txt  README.md
src/rmoss_master/rmoss_ign_resources/: CMakeLists.txt  README.md
src/rmoss_master/rmoss_ign_resources/test/: rm21_referee_system.sdf  rm22_referee_system.sdf
src/serialport/: CMakeLists.txt  README.md  package.xml
src/serialport/include/: serialport_node.hpp
src/serialport/include/data_processor/: data_transform.hpp
src/serialport/include/serialport/: crc_check.hpp  packet.hpp  serialport.hpp  serialport_node.hpp  serialport_old.hpp
src/serialport/launch/: serial_driver.launch.py
src/serialport/src/: serialport_node.cpp
src/serialport/src/data_processor/: data_transform.cpp
src/serialport/src/serialport/: crc_check.cpp  crc_check_old.cpp  serialport.cpp  serialport_node.cpp  serialport_node_main.cpp  serialport_old.cpp
src/vehicle_system/autoaim/armor_detector/: CMakeLists.txt  README.md  package.xml
src/vehicle_system/autoaim/armor_processor/: CMakeLists.txt  README.md  package.xml
src/vehicle_system/buff/buff_detector/: CMakeLists.txt  README.md  package.xml
src/vehicle_system/buff/buff_processor/: CMakeLists.txt  README.md  package.xml
src/vehicle_system/buff/test/: CMakeLists.txt
src/vehicle_system/filter/: CMakeLists.txt  README.md  package.xml
src/vehicle_system/filter/include/: extend_kalman_filter.hpp  imm.hpp  kalman_filter.hpp  model_generator.hpp  motion_model.hpp  particle_filter.hpp
src/vehicle_system/filter/src/: imm.cpp  kalman_filter.cpp  model_generator.cpp  motion_model.cpp  particle_filter.cpp
src/vehicle_system/filter/test/: extend_kalman_filter.cpp  figure.cpp  imm.cpp  imm.hpp  imm_system_model.hpp  main.cpp  measurement_model.cpp  system_model.cpp  system_model.hpp
(+1404 files in other folders)
