<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>rmoss_ign_resources</name>
    <version>0.9.0</version>
    <description>RoboMaster Referee System Module and RMUA Standard Robot SDF Models for Ignition Simulator</description>
    <maintainer email="zhenpeng.ge@qq.com">Zhenpeng Ge</maintainer>
    <license>Apache License 2.0</license>
    <buildtool_depend>ament_cmake</buildtool_depend>
    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>
    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>

