<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>camera_driver</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="liubiao@todo.todo">liubiao</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>OpenCV</depend>
  <depend>geometry_msgs</depend>
  <depend>yaml-cpp</depend>
  <depend>camera_info_manager</depend>
  <depend>image_transport</depend>
  <depend>camera_calibration_parsers</depend>
  <depend>launch_ros</depend>
  <depend>rosbag2_cpp</depend>
  <depend>global_user</depend>
  <depend>global_interface</depend>
  <depend>cv_bridge</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
