<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>rmoss_ign_bridge</name>
    <version>1.0.0</version>
    <description>Ignition-ROS brdige for Ignition Gazebo Simulator</description>
    <maintainer email="zhenpeng.ge@qq.com">Zhenpeng Ge</maintainer>
    <license>Apache License 2.0</license>
    <buildtool_depend>ament_cmake</buildtool_depend>
    <depend>rclcpp</depend>
    <depend>std_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>rmoss_interfaces</depend>
    <depend>ros_ign_gazebo</depend>
    <depend>ros_ign_bridge</depend>
    <depend>rmoss_ign_resources</depend>
    <depend>rmoss_ign_plugins</depend>
    <!-- Fortress -->
    <depend condition="$IGNITION_VERSION == fortress">ignition-msgs8</depend>
    <depend condition="$IGNITION_VERSION == fortress">ignition-transport11</depend>
    <!-- Edifice (default) -->
    <depend condition="$IGNITION_VERSION == edifice">ignition-msgs7</depend>
    <depend condition="$IGNITION_VERSION == edifice">ignition-transport10</depend>
    <depend condition="$IGNITION_VERSION == ''">ignition-msgs7</depend>
    <depend condition="$IGNITION_VERSION == ''">ignition-transport10</depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>
    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>

