<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rmoss_daheng_driver</name>
  <version>1.0.0</version>
  <description>RoboMaster Daheng Camera Package, it provides camera driver for Daheng Camera.</description>
  <maintainer email="2646677495@qq.com">Holakk Li</maintainer>
  <maintainer email="ericc_feng@qq.com">Eric Feng</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>libopencv-dev</depend>
  <depend>rmoss_interfaces</depend>
  <depend>rmoss_cam</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
